<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/item_wrapper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/normal_margin_minus"
    android:background="@drawable/comment_item_background"
    android:elevation="5dp"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/comment_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/comment_item_padding"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/vertical_space_divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <!-- comment course title -->
                <TextView
                    android:id="@+id/tv_course_title"
                    android:textColor="@color/steelblue"
                    android:textSize="@dimen/comment_course_title_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_course_title" />

                <!-- comment date -->
                <TextView
                    android:id="@+id/tv_time"
                    android:textSize="@dimen/comment_date_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_comment_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp">
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/iv_avatar"
                        android:layout_gravity="center"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/default_avatar"
                        android:scaleType="fitXY"
                        android:background="@drawable/round_background_with_border"
                        app:riv_oval="true" />
                </FrameLayout>

                <!-- comment user -->
                <TextView
                    android:id="@+id/username_view"
                    android:textSize="@dimen/comment_user_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_comment_user" />
            </LinearLayout>
        </LinearLayout>

        <!--<View style="@style/line_divider"/>-->

        <!-- comment content -->
        <TextView
            android:fontFamily="@font/stxinwei"
            android:textSize="@dimen/comment_content_size"
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_comment_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:clickable="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/user_home_items"
                    android:padding="@dimen/thumb_padding"
                    android:text="@string/like_icon"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/comment_thumb_size" />

                <TextView
                    android:id="@+id/tv_vote_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/user_home_items"
                    android:padding="@dimen/thumb_padding"
                    android:text="@string/unlike_icon"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/comment_thumb_size" />

                <TextView
                    android:id="@+id/tv_vote_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>